// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components/Header Default Value 1`] = `
<header>
  <div
    className="item-header"
  />
  <div
    className="item-header"
  />
</header>
`;

exports[`Storyshots components/Header Initialized 1`] = `
<header>
  <div
    className="item-header"
  >
    Bienvenue
  </div>
  <div
    className="item-header"
  >
    Sous titre
  </div>
</header>
`;

exports[`Storyshots components/Header Mini 1`] = `
<header
  className="mini"
>
  <div
    className="item-header"
  >
    Bienvenue
  </div>
  <div
    className="item-header"
  >
    Sous titre
  </div>
</header>
`;
